sms service added with android integration
